--- a/EasyEvents/Base.lproj/Main.storyboard
+++ b/EasyEvents/Base.lproj/Main.storyboard
@@ -314,6 +314,14 @@
                                     <action selector="toggle:" destination="3HD-uG-ikd" eventType="touchUpInside" id="266-ym-ScO"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jSl-5g-Aha">
+                                <frame key="frameInset" minX="152" minY="631" width="113" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="STATUS"/>
+                                <connections>
+                                    <segue destination="8Er-oT-6Hv" kind="show" id="KGZ-WP-OGF"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -335,4 +343,7 @@
         <image name="checkmark.png" width="500" height="500"/>
         <image name="date.png" width="256" height="256"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="KGZ-WP-OGF"/>
+    </inferredMetricsTieBreakers>
 </document>
